# oarc-rag

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  pytest.ini
docs/: Big_Brain.md  Cognition.md  Enrichment.md  Smol_Brain.md  Specification.md
docs.old/: curriculum.md  curriculum_workflow.md  database.md  decorators.md  generator_and_resource_modules.md  generator_package.md  osyllabi_api.md  project_testing.md  rag_system.md  vector_operations.md
src/: __init__.py  main.py
src/oarc_rag/ai/: __init__.py  agent.py  client.py  prompts.py
src/oarc_rag/ai/agents/: __init__.py  agent.py  base_agent.py  expansion_agent.py  merge_agent.py  optimizer_agent.py  prune_agent.py  rag_agent.py  split_agent.py
src/oarc_rag/core/: __init__.py  cache.py  chunking.py  context.py  database.py  embedding.py  engine.py  llama.py  monitor.py  query.py  rag.py  rag_agent.py
src/oarc_rag/tests/: conftest.py
src/oarc_rag/tests/ai/: client_test.py  model_availability_test.py  prompts_test.py
src/oarc_rag/tests/ai/agents/: agent_test.py
src/oarc_rag/tests/core/: cache_test.py  chunking_test.py  context_test.py  database_test.py  embedding_test.py  engine_test.py  llama_test.py  monitor_test.py  query_test.py  rag_agent_test.py
src/oarc_rag/tests/utils/decorators/: factory_test.py  singleton_test.py
src/oarc_rag/tests/utils/vector/: operations_test.py
src/oarc_rag/utils/: __init__.py  const.py  deps.py  log.py  paths.py  utils.py
src/oarc_rag/utils/cli/: __init__.py  clean.py  cmd.py  cmd_desc.py  cmd_types.py  help.py  parser.py  router.py
src/oarc_rag/utils/cli/commands/: __init__.py  clean_cmd.py  create_cmd.py  help_cmd.py
src/oarc_rag/utils/config/: config.py
src/oarc_rag/utils/decorators/: __init__.py  factory.py  singleton.py
src/oarc_rag/utils/vector/: __init__.py  operations.py
